# Assimulo

./: CMakeLists.txt  migration.md  pyproject.toml  setup.py  setup_setuptools.py  test_cmake_setup.py
cmake/: FindSUNDIALS.cmake
src/: CMakeLists.txt
src/solvers/: CMakeLists.txt
